--- a/E-COMMERCE/client/index.html
+++ b/E-COMMERCE/client/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Clase 1 JavaScript</title>
+    <title>E-COMMERCE</title>
     <!--  SDK MercadoPago.js -->
     <script src="https://sdk.mercadopago.com/js/v2"></script>
 </head>
